templates/kube-downscaler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: kube-downscaler
    version: v22.9.0
  name: kube-downscaler
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-downscaler
  template:
    metadata:
      labels:
        application: kube-downscaler
        version: v22.9.0
    spec:
      serviceAccountName: kube-downscaler
      containers:
      - name: downscaler
        image: K8s_DOWNS_REGISTRY/proj-idun-aas/kube-downscaler:22.9.0
        args:
        - --dry-run
        - --interval=60
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 5m
            memory: 100Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
      imagePullSecrets:
      - name: armdockersecret
